# optpp

./: INSTALL  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
config/: acx_mpi.m4  optpp_options.m4
docs/: Makefile.in
docs/guide/: example2.html
docs/guide/.svn/: dir-wcprops  entries
docs/guide/.svn/text-base/: InstallDoc.html.svn-base  example1.html.svn-base
docs/guide/.svn/wcprops/: AboutDoc.html.svn-work  AlternativeFunctions.html.svn-work  BoundConstrainedProblems.html.svn-work  BoundConstraints.html.svn-work  COPYRIGHT.html.svn-work  Classification.html.svn-work  CompoundConstraintsDoc.html.svn-work  ConstrainedProblems.html.svn-work  ConstraintsDoc.html.svn-work  ControlParameters.html.svn-work  FAQS.html.svn-work  GUI_XMLDoc.html.svn-work  InstallDoc.html.svn-work  License.html.svn-work  LinearConstraints.html.svn-work  MainPage.html.svn-work  MethodsDoc.html.svn-work  NonLinearConstraints.html.svn-work  OptionsDoc.html.svn-work  ParallelOptimization.html.svn-work  ReferencesDoc.html.svn-work  SetUp.html.svn-work  UnconstrainedObject.html.svn-work  UnconstrainedProblems.html.svn-work  example1.html.svn-work  example1_out.html.svn-work  example2.html.svn-work  example2_out.html.svn-work  footer.html.svn-work  gensetGuide-format.html.svn-work  header.html.svn-work  subroutine1.html.svn-work  subroutine1_out.html.svn-work  subroutine2.html.svn-work  subroutine2_out.html.svn-work  tstbcnips.html.svn-work  tstbcqnewton.html.svn-work  tstcg.html.svn-work  tstcg_out.html.svn-work  tstgss.html.svn-work  (+8 more)
docs/images/.svn/: dir-wcprops  entries
docs/images/.svn/wcprops/: bckgnd.jpg.svn-work  csmrlogo.gif.svn-work  doxygen.gif.svn-work  gensetBox.gif.svn-work  gensetMin.gif.svn-work  gensetStd.gif.svn-work  lbllogo.jpg.svn-work  maui_advanced.png.svn-work  maui_application.png.svn-work  maui_arrays.png.svn-work  maui_classpath.png.svn-work  maui_config.png.svn-work  maui_nips.png.svn-work  maui_noaction.png.svn-work  maui_opt++.png.svn-work  maui_startup.png.svn-work  maui_subroutine.png.svn-work  nersclogo.gif.svn-work  opt++_logo.gif.svn-work  sandialogo.gif.svn-work  tBird2D.gif.svn-work
docs/techreport/.svn/: dir-wcprops  entries
docs/techreport/.svn/wcprops/: opt++.ps.svn-work
include/: AppLauncher.h  Appl_Data.h  Appl_Data_NPSOL.h  BoundConstraint.h  CGProblem.h  CompoundConstraint.h  Constraint.h  ConstraintBase.h  GenSetBase.h  GenSetBox2d.h  GenSetMin.h  GenSetStd.h  LSQNLF.h  LinearConstraint.h  LinearEquation.h  LinearInequality.h  NIPSProblem.h  NLF.h  NLFAPP.h  NLP.h  NLP0.h  NLP1.h  NLP2.h  NLPBase.h  NPSOLProblem.h  NewtonProblem.h  NonLinearConstraint.h  NonLinearEquation.h  NonLinearInequality.h  OPT++_config.h.in  Opt.h  OptBCEllipsoid.h  OptBCFDNewton.h  OptBCNewton.h  OptBCNewtonLike.h  OptBCQNewton.h  OptBaNewton.h  OptBaQNewton.h  OptCG.h  OptConstrFDNewton.h  (+25 more)
newmat11/: CONDITIONS_OF_USE  Makefile.am  Makefile.in  bandmat.C  cholesky.C  configure.in  garch.cpp  hholder.C  include.h  newmat.h  newmat3.C  newmat4.C  newmat5.C  newmat6.C  newmat7.C  newmat8.C  newmatap.h  newmatex.C  newmatnl.C  nl_ex.cpp  nm11.htm  nm_b55.mak  nm_b56.mak  nm_cc.mak  nm_ex1.cpp  nm_ex2.cpp  nm_gnu.mak  nm_i5.mak  nm_il5.mak  nm_m6.mak  nm_ow.mak  precisio.h  readme.txt  submat.C  tmt.txt
src/: Makefile.am  Makefile.in  globals.C
src/Base/: Appl_Data.C  Appl_Data_NPSOL.C  FDNLF1.C  LSQNLF.C  Makefile.am  Makefile.in  NLF0.C  NLF1.C  NLF2.C  NLP.C  NLP0.C  NLP1.C  NLP2.C  TOLS.C  backtrack.C  dogleg.C  linesearch.C  mcsrch.C  trustpds.C  trustregion.C
src/Constraints/: BoundConstraint.C  CompoundConstraint.C  Constraint.C  LinearConstraint.C  LinearEquation.C  LinearInequality.C  Makefile.am  Makefile.in  NonLinearConstraint.C  NonLinearEquation.C  NonLinearInequality.C
src/GSS/: GenSetBase.C  GenSetBox2d.C  GenSetMin.C  GenSetStd.C  Makefile.am  Makefile.in  OptGSS.C
src/Newton/: Makefile.am  Makefile.in  OptBCEllipsoid.C  OptBCFDNewton.C  OptBCNewton.C  OptBCNewtonLike.C  OptBCQNewton.C  OptBaNewton.C  OptBaQNewton.C  OptCG.C  OptConstrFDNewton.C  OptConstrNewton.C  OptConstrNewtonLike.C  OptConstrQNewton.C  OptDHNIPS.C  OptFDNIPS.C  OptFDNewton.C  OptLBFGS.C  OptNIPS.C  OptNIPSLike.C  OptNewton.C  OptNewtonLike.C  OptQNIPS.C  OptQNewton.C
src/PDS/: Makefile.am  Makefile.in  create_scheme.C  make_search.c  pds.C  pdschk.C  pdscom.c  pdsdone.c  pdsget.c  pdsgop.c  pdshrk.c  pdsinit.C  pdsopt.C  pdsstep.C  pdswork.C  writes.c
src/UserInterface/: AppLauncher.C  CGProblem.C  FDNLF1APP.C  Makefile.am  Makefile.in  NIPSProblem.C  NLF0APP.C  NPSOLProblem.C  NewtonProblem.C  Opt.xml  PDSProblem.C  Problem.C  ReadOptAction.java  SaveOptAction.java  VariableList.C  opt++.C
src/Utils/: BoolVector.C  Makefile.am  Makefile.in  OptppExceptions.C  OptppFatalError.C  file_cutils.c  linalg.c  mcholesky.C  print.C  timers.c
tests/: Makefile.am  Makefile.in
tests/constraints/: Makefile.am  Makefile.in  tstbc.C  tstcompound.C  tstfcn.C  tstfcn.h  tstlinear.C  tstnonlinear.C
tests/hock/: Makefile.am  Makefile.in  hockfcns.C  hockfcns.h  tsthock1.C  tsthock10.C  tsthock13.C  tsthock14.C  tsthock2.C  tsthock26.C  tsthock28.C  tsthock35.C  tsthock5.C  tsthock6.C  tsthock65.C  tsthock7.C  tsthock77.C  tsthock78.C
tests/npsol/: Makefile.am  Makefile.in
tests/parallel/: Makefile.am  Makefile.in  tstGSS.C  tstfcn.C  tstfcn.h  tstfdnewtpds.C  tstnewtpds.C  tstpds.C  tsttrpds.C
tests/uncon/: Makefile.am  Makefile.in  rosen.C  tstLBFGS.C  tstcg.C  tstfcn.h  tstfdnlf1.C  tstgnewton.C  tstqnewton.C
tests/xml/: Makefile.am  Makefile.in  hockfcns.C  rosen.C  tstCG.xml  tstFD.xml  tstHock14.xml  tstHock65.xml  tstNIPS.xml  tstNewton.xml  tstPDS.xml  tstQNewton.xml  tstTRPDS.xml
