
# This file is a shell script fragment that supplies the information
# necessary to tailor a template configure script into the configure
# script appropriate for this directory.  For more information, check
# any existing configure script.

srctrigger=newmat1.C
srcname="NEWMAT11 Source"

# per-host:

host_fragment=../config/mf-${host_name}-${target_name}${compiler_name}

# per-target:

Makefile=Makefile-${target_name}
touch $Makefile
files="${Makefile}"
links="Makefile"
